# jude

./: .gitignore  Cargo.toml  GAP_ANALYSIS.md  README.md  README.zh.md  REPLICATION_PLAN.md  pyproject.toml  pytest.ini
benchmarking/: README.md  RESULTS.md  _bench_ray.py  bench_actor_pool_parity.py  bench_ann_memrerank.py  bench_billion_scale.py  bench_curation.py  bench_multimodal_inference.py  bench_multimodal_pipeline.py  bench_multinode.py  bench_multinode_shuffle.py  bench_pretraining_pipeline.py  bench_tpch.py  bench_udf_backends.py  bench_vector_distributed.py  bench_vector_distributed_matrix.py  bench_vector_index_all.py  bench_vector_index_wins.py  bench_vector_matrix.py  bench_vector_methods_matrix.py  bench_vector_recall.py  bench_vector_scaling.py  bench_vector_sharded_win.py  bench_vector_throughput.py  bench_vs_daft.py  ray-metrics-docker.sh  ray-metrics-stack.sh
docs/: battle.md  billion_scale_vector_search.zh.md  cosmos_pipeline.md  distributed_and_udf_internals.zh.md  distributed_design.md  distributed_design.zh.md  duckdb_distributed_retrieval_design.zh.md  gap_analysis_vs_vane.zh.md  gap_vane_vs_jude.zh.md  index_design.zh.md  llm_data_engine_plan.zh.md  llm_data_engine_roadmap.zh.md  llm_data_operators.zh.md  multimodal_design.md  multimodal_design.zh.md  observability.md  observability_and_ray_dashboard.zh.md  pain_points_audit.zh.md  ray_getting_started.md  storage_design.zh.md  udf_design.md  udf_design.zh.md  vector_benchmark_matrix.zh.md  vector_high_recall.zh.md  vector_retrieval_report.zh.md
frontend/: .gitignore  README.md  index.html  package.json  vite.config.js
src/: arrow_ffi.rs  config.rs  connection.rs  curate.rs  curate_mm.rs  curate_py.rs  env.rs  error.rs  expressions.rs  kmeans.rs  lib.rs  mat_scan.rs  observe.rs  observe_audit.rs  plan.rs  relation.rs  stream.rs  typing.rs
tests/: conftest.py  test_actor_pool_parity.py  test_aggregate_udf.py  test_aggregates_windows.py  test_audit.py  test_auto_distribute.py  test_benchmarks.py  test_blend_provenance_lineage.py  test_boundary_scan.py  test_cache_invalidation.py  test_catalog.py  test_cluster_scheduler.py  test_compat.py  test_console.py  test_curate.py  test_curate_c6_c10_c11.py  test_curate_dist.py  test_curate_flow.py  test_curate_mm.py  test_curate_operators.py  test_curate_quality_fixes.py  test_daft_bridge.py  test_dag_executor.py  test_data_versioning.py  test_datasource.py  test_dist_cc.py  test_dist_image_dedup.py  test_dist_substring_dedup.py  test_distributed_agg.py  test_distributed_bm25_global.py  test_distributed_curation_parity.py  test_distributed_fuzzy_dedup.py  test_distributed_groupby_merge.py  test_distributed_ops.py  test_hive.py  (+67 more)
(+87 files in other folders)
