[package]
name = "jude"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A distributed, multimodal data engine built on DuckDB"
license = "Apache-2.0"

[lib]
name = "jude"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ai-openai"]
ai-openai = ["dep:reqwest", "dep:tokio"]
ai-anthropic = ["dep:reqwest", "dep:tokio"]
ai-google = ["dep:reqwest", "dep:tokio"]
ai-transformers = []

[dependencies]
duckdb = { version = "1.10504", features = [
    "bundled",
    "r2d2",
    "chrono",
    "serde_json",
    "vtab-arrow",
    "vscalar",
    "vscalar-arrow",
] }
arrow = { version = "58", features = ["prettyprint", "ffi", "ipc"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
# Multimodal image kernels (decode/resize/encode). Default features pull in the
# common codecs (PNG/JPEG/etc.); no system libs needed.
image = "0.25"
redb = "2.6.3"
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
