[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jude"
version = "0.1.0"
description = "A distributed, multimodal data engine built on DuckDB"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pyarrow>=14",
    "cloudpickle>=3",
]

[project.optional-dependencies]
ray = ["ray>=2.9"]
pipeline = ["cosmos-xenna>=0.5"]
multimodal = ["pillow", "soundfile", "numpy"]
web = ["warcio>=1.7"]          # WARC/WET reading (CommonCrawl); html_to_text has a built-in fallback
storage = ["s3fs", "gcsfs"]    # object-store URLs (s3://, gs://) via fsspec; MinIO via endpoint_url

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
